--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-    "name": "University-Chat-Bot",
-    "version": "1.0.0",
-    "description": "",
-    "scripts": {
-        "build": "echo \"No build specified\" && exit 1",
-       "test": "echo \"No test specified\" && exit 1",
-       "start": "node index.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/mdsarfraz2002/University-Chat-Bot.git"
-  } 
-    
-    "bugs": {
-        "url": "https://github.com/mdsarfraz2002/University-Chat-Bot/issues"
-    },
+  "name": "university-chat-bot",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mdsarfraz2002/University-Chat-Bot.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mdsarfraz2002/University-Chat-Bot/issues"
+  },
   "homepage": "https://github.com/mdsarfraz2002/University-Chat-Bot#readme"
 }
 
