--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "university-chat-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "App.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
