--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "university-chat-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "App.jsx",
+  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "predeploy": "npm run build",   
+    "deploy": "gh-pages -d build",    
+    "start": "react-scripts start",   
+    "build": "react-scripts build",   
+    "test": "react-scripts test",   
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
