--- a/requirements.txt
+++ b/requirements.txt
@@ -72,7 +72,7 @@ requests-oauthlib==1.3.1
 rsa==4.9
 scipy==1.10.1
 six==1.16.0
-scikit-learn==0.0.post1
+scikit-learn==1.3.0
 stack-data==0.6.2
 tensorboard==2.12.0
 tensorboard-data-server==0.7.0
